# autoresearch-x

./: .gitignore  LICENSE  README.md  pyproject.toml
.autoresearch-x/apr03-Reduce/: state.json
.autoresearch-x/apr03-Reduce/branches/main/: results.tsv
.autoresearch-x/apr03-Reduce/branches/main/iterations/: 22a97c1.md  8bde97c.md  e7de93d.md  f02a67e.md
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: evaluator.md  planner.md  strategist.md  worker.md
agents/: evaluator.md  reviewer.md  strategist.md  worker.md
docs/: 2026-04-03-investigate-phase-machine.md
evals/: evals.json
hooks/: completion-check.sh  eval-bypass-detector.sh  hooks.json  iteration-gate.sh  lib.sh  run-control.sh  scope-guard.sh
skills/autoresearch-x/: SKILL.md  ref-branching.md  ref-debug-mode.md  ref-investigate-mode.md  ref-optimize-mode.md  ref-tracking.md
skills/autoresearch-x/templates/: debug.md  investigate.md  optimize.md  report-debug.md  report-investigate.md  report-optimize.md
src/autoresearch_x/: __init__.py  branch_manager.py  coordinator.py  models.py  program_parser.py  sdk_teammate.py  state_manager.py  teammate_manager.py
test-cases/analytics-engine/: analytics.py  bench.py  program.md
test-cases/api-latency/: KNOWN_BUGS.md  bench.py  program.md  server.py
tests/: test_integration.py  test_models.py  test_phase_transition.py  test_program_parser.py  test_schema_checker.py  test_sdk_teammate.py  test_state_manager.py
