[project]
name = "autoresearch-x-coordinator"
version = "2.1.0"
description = "Agent Teams Coordinator for autoresearch-x iteration loops"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "click>=8.0.0",
    "fastapi>=0.128.8",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[project.scripts]
autoresearch-x = "autoresearch_x.coordinator:cli"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/autoresearch_x"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"
